# dprint-plugin-dockerfile

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  dprint.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.generated.yml  ci.ts  ci.yml
deployment/: schema.json
deployment/npm/: README.md  index.js  index.test.js  package-lock.json  package.json  setup.js
scripts/: generate_release_notes.ts
src/: ast.rs  error.rs  format_text.rs  lib.rs  parser.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  resolve_config.rs
src/generation/: context.rs  generate.rs  helpers.rs
src/parser/: context.rs  helpers.rs  mod.rs  parse.rs
tests/: test.rs
tests/specs/Arg/: Arg_All.txt
tests/specs/Cmd/: Cmd_All.txt
tests/specs/Copy/: Copy_All.txt
tests/specs/Entrypoint/: Entrypoint_All.txt
tests/specs/Env/: Env_All.txt
tests/specs/From/: From_All.txt
tests/specs/General/: Comments_All.txt  DroppedComments_All.txt  Escape_All.txt  Instructions_All.txt  Lenient_All.txt
tests/specs/Healthcheck/: Healthcheck_All.txt  Healthcheck_CmdNewLine.txt  Healthcheck_LineWidth.txt
tests/specs/Heredoc/: Heredoc_All.txt
tests/specs/Issues/: Issue0004.txt
tests/specs/Label/: Label_All.txt
tests/specs/Misc/: Misc_All.txt
tests/specs/Onbuild/: Onbuild_All.txt
tests/specs/Run/: Run_All.txt
tests/specs/Shell/: Shell_All.txt
