[package]
name = "dprint-plugin-dockerfile"
version = "0.2.3"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-dockerfile"
keywords = ["formatting", "formatter", "docker", "dockerfile"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-dockerfile"
description = "A WIP dockerfile formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
anyhow = "1.0.51"
dockerfile-parser = "0.8.0"
dprint-core = { version = "0.58.2", features = ["formatting"] }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.9.0"
serde_json = { version = "1.0" }
