[package]
name = "dprint-plugin-dockerfile"
version = "0.3.4"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-dockerfile"
keywords = ["formatting", "formatter", "docker", "dockerfile"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-dockerfile"
description = "A WIP dockerfile formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
dprint-core = { version = "0.68.1", features = ["formatting"], default-features = false }
dprint-core-macros = "0.1.0"
monch = "0.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2"

[dev-dependencies]
dprint-development = "0.11.0"
serde_json = { version = "1.0" }
